--- a/set.env
+++ b/set.env
@@ -6,7 +6,7 @@ AUTO_READ_MESSAGES=off
 PM_PERMIT=off
 BOT_MENU_LINKS=https://telegra.ph/file/0b918caf8e6440bc67fd5.jpg 
 BOT_MODE=private
-DATABASE_URL=postgresql://patron_zoiz_user:SmaPFMMb6GQ1VkawpRnyHadl8qRUhBdW@dpg-cr57s4rv2p9s73af3cu0-a.oregon-postgres.render.com/patron_zoiz
+DATABASE_URL=postgresql://patron_url_user:Kx8R0Ztm4GUbwebAJMAL0WPpyH5K1xM2@dpg-crhm6djv2p9s73bcsnb0-a.oregon-postgres.render.com/patron_url
 OWNER_NAME=PATRON 🚹 
 OWNER_NUMBER=2348133729715
 WARN_COUNT=3
